# metricTensor-FRW

./: README.md  pyproject.toml  tensorMetrico.ipynb
